tests/NormalTests/paczka2/big_fuzzy/28821648.err
Error in line 13: lznAtR65AOR A948 91,6
Error in line 14: lznAtR65AOR A824 16,8
Error in line 18: SjQI4qBQVj A824 7H,2
Error in line 37: 5Bo55Zdna!F A948 6,6
Error in line 39: fGlLmyU S69 484,1
Error in line 47: 5Bo55Zdna2F A824 14,63
Error in line 34: SjQI4qBQVj A824 15,4
Error in line 56: lznAtR65AOR A824 7,6
Error in line 57: lznAtR65AOR A948 79,9
Error in line 59: VhL8MBDrG A948 18,9
Error in line 64: SjQI4qBQVj A948 36,0
Error in line 61: lznAtR65AOR A824 92,5
Error in line 42: k9AnEF3B S69 98,2
Error in line 50: 5Bo55Zdna2F A824 34,3
Error in line 82: fGlLmyU S69 95,3
Error in line 84: fGlLmyU A948 61,0
Error in line 92: k9AnEF3B A948 70,48
Error in line 93: A824 A665 71,7
Error in line 116: A824 A948 1,8
Error in line 117: A824 A824 12,7
Error in line 124: SjQI4qBQVj A824 r20,5
Error in line 119: SjQI4qBQVj A824 28,7
Error in line 127: fGlLmyU A824 68,7
Error in line 134: k9AnEF3B S69 28,0
Error in line 147: VhL8MBDrG A948 -1,8
Error in line 143: VhL8MBDrG A948 9,4
Error in line 155: VhL8MBDrGA665246,8
Error in line 151: VhL8MBDrG A665 75,7
Error in line 156: SjQI4qBQVj A665 7,2
Error in line 160: SjQI4qBQVj S69 73,5
Error in line 159: VhL8MBDrG A948 35,8
Error in line 165: A824 A665 88,5
Error in line 162: SjQI4qBQVj A824 59,6
Error in line 169: SjQI4qBQVj A665 82,8
Error in line 183: SjQI4qBQVj S69 26,9
Error in line 194: lznAtR65AOR A665 12,3
Error in line 190: fGlLmyU A908 76,2
Error in line 199: 5Bo55Zdna2F A824 83,6
Error in line 198: A824 A824 313,3
Error in line 217: lznAtR65AOR A665 17,8
Error in line 219: k9AnEF3B A948 84,6
Error in line 246: fGlLmyU S69 61,43
Error in line 233: fGlLmyU A948 45,7
Error in line 247: fGlLmyU S69 171,6
